# zellij-forgot

./: .Cargo.toml.swp  Cargo.toml  README.md  dev.kdl
src/: helper.rs  main.rs
