[package]
name = "zellij_forgot"
version = "0.2.0"
edition = "2021"
authors = ["Karim Ould Mahieddine"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-fuzzy-search = { git = "https://gitlab.com/EnricoCh/rust-fuzzy-search"}
owo-colors = "4.1.0"
zellij-tile = "0.41.2"
chrono = "0.4"
